Fix broken links

--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,6 @@ theme = "nofancy"
 [author]
     name = "emmanuel delgado"
     github = "chischaschos"
-    linkedin = "https://mx.linkedin.com/in/emmanueldelgado"
+    linkedin = "emmanueldelgado"
     gaID = "UA-21486770-1"
     twitter = "chischaschos"
