--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://chischaschos.github.io/"
+baseurl = "//chischaschos.github.io/"
 languageCode = "en-us"
 title = "chischaschos rocks"
 theme = "nofancy"
